--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,3 @@
-<!--Template Name: vacayhome
-File Name: gallery.html
-Author Name: ThemeVault
-Author URI: http://www.themevault.net/
-License URI: http://www.themevault.net/license/-->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,7 +5,7 @@ License URI: http://www.themevault.net/license/-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="images/icons/favicon.png"/>
-        <title>vacayhome</title>
+        <title>Tomodachi</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -23,34 +17,9 @@ License URI: http://www.themevault.net/license/-->
         <link href="css/responsive.css" rel="stylesheet">
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="js/jquery.imagesloaded.js"></script>
-        <script src="js/masonry.pkgd.min.js"></script>
         <script src="js/lightbox-plus-jquery.min.js" type="text/javascript"></script>
         <script src="js/instafeed.min.js" type="text/javascript"></script>
         <script src="js/custom.js" type="text/javascript"></script>
-        <style>
-            .grid {
-                background: rgba(0,0,0,0);
-            }
-            /* clear fix */
-            .grid:after {
-                content: '';
-                display: block;
-                clear: both;
-            }
-            /* ---- .grid-item ---- */
-            .grid-sizer,
-            .grid-item {
-                width: 33.34%;
-            }
-            .grid-item {
-                float: left;
-            }
-            .grid-item img {
-                display: block;
-                max-width: 100%;
-            }
-        </style>
     </head>
     <body>
         <div id="page">
@@ -80,11 +49,11 @@ License URI: http://www.themevault.net/license/-->
                             <div class="col-md-2 col-sm-6 col-xs-6">
                                 <div id="logo">
                                     <!--<a href="index.html"><img src="images/logo.png" alt="logo"></a>-->
-                                    <a href="index.html"><span>vacay</span>home</a>
-                                </div>                       
+                                    <a href="index.html"><span>Tomo</span>dachi</a>
+                                </div>
                             </div>
                             <div class="col-sm-6 visible-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
                             </div>
                             <div class="col-md-8 col-sm-12 col-xs-12 remove-padd">
                                 <nav class="navbar navbar-default">
@@ -99,19 +68,19 @@ License URI: http://www.themevault.net/license/-->
                                     </div>
                                     <div class="collapse navigation navbar-collapse navbar-ex1-collapse remove-space">
                                         <ul class="list-unstyled nav1 cl-effect-10">
-                                            <li><a  data-hover="Home" href="index.html"><span>Home</span></a></li>
-                                            <li><a data-hover="About" href="about.html"><span>About</span></a></li>
-                                            <li><a data-hover="Rooms" href="rooms.html"><span>Rooms</span></a></li>
-                                            <li><a data-hover="Gallery" class="active"><span>Gallery</span></a></li>
-                                            <li><a data-hover="Dinning" href="dinning.html"><span>Dinning</span></a></li>
-                                            <li><a data-hover="News" href="news.html"><span>News</span></a></li>
-                                            <li><a data-hover="Contact Us" href="contact.html"><span>contact Us</span></a></li>
+                                            <li><a data-hover="Home" href="index.html"><span>Home</span></a></li>
+                                            <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
+                                            <li><a data-hover="Map"  href="rooms.html"><span>Map</span></a></li>
+                                            <li><a data-hover="Chat"  class="active"><span>Chat</span></a></li>
+                                            <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Connect" href="news.html"><span>Connect</span></a></li>
+                                            <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
                             </div>
                         </div>
                     </div>
@@ -119,72 +88,69 @@ License URI: http://www.themevault.net/license/-->
             </header>
 
 
-            <!--end-->
-            <section class="image-head-wrapper">
+            <!--end
+            <section class="image-head-wrapper" style="background-image: url('images/banner3.jpg');">
                 <div class="inner-wrapper">
-                    <h1>Gallery</h1>
+                    <h1>About us</h1>
                 </div>
             </section>
-            <div class="clearfix"></div>
+            <div class="clearfix"></div>-->
+<!--  <p id="mytab1">hi</p>-->
 
-            <section class="gallery-block">
+
+
+
+
+
+
+<!--
+            <section class="about-block">
                 <div class="container">
                     <div class="row">
-                        <div class="grid hover-effect">
-                            <div class="grid-sizer"></div>
-                            <div class="grid-item percent37 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery1-1.jpg" data-lightbox="example-1"><img src="images/gallery1.png" class="img-responsive" alt="gallery1"></a>
-                            </div>
-                            <div class="grid-item percent25 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery2-2.jpg" data-lightbox="example-1"><img src="images/gallery2.png" class="img-responsive" alt="gallery1"></a>
-                            </div>
-                            <div class="grid-item percent37 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery3-3.jpg" data-lightbox="example-1"><img src="images/gallery3.png" class="img-responsive" alt="gallery1"></a>
-                            </div>
-                            <div class="grid-item percent25 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery4-4.jpg" data-lightbox="example-1"><img src="images/gallery4.png" class="img-responsive" alt="gallery1"></a>
-                            </div>
-                            <div class="grid-item percent37 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery5-5.jpg" data-lightbox="example-1"><img src="images/gallery5.png" class="img-responsive" alt="gallery1"></a>
-                            </div>
-                            <div class="grid-item percent20 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery6-6.jpg" data-lightbox="example-1"><img src="images/gallery6.png" class="img-responsive" alt="gallery1"></a>
-                            </div>
-                            <div class="grid-item percent20 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery7-7.jpg" data-lightbox="example-1"><img src="images/gallery7.png" class="img-responsive" alt="gallery1"></a>
-                            </div>
-                            <div class="grid-item percent20 gallery-image">
-                                <a class="example-image-link img-responsive" href="images/gallery8-8.jpg" data-lightbox="example-1"><img src="images/gallery8.png" class="img-responsive" alt="gallery1"></a> 
-                            </div>
+                        <div class="col-md-5 about-left">
+                            <p>Lorem <label>ipsum</label> dol  <span>-sitamet</span></p>
+                        </div>
+                        <div class="col-md-7 about-right">
+                            <h3>Lorem ipsum dolor sit amet, consec</h3>
+                            <p>Donec bibendum massa metus, vel aliquet nunc varius eu. Curabitur nec scelerisque dui. Quisque mattis libero et enim ultricies gravida. Nulla ut commodo massa, eget tincidunt ligula. Vivamus eu ante tincidunt, fermentum risus nec, pharetra turpis. Donec rhoncus eros sed felis aliquet tincidunt. In consectetur tempor quam</p>
+                            <ul class="list-unstyled list-inline">
+                                <li>Sed vitae facilisis nisi, in finibus lacus. Duis vel nulla orci.</li>
+                                <li>fringilla, at ultrices felis dignissim. Integer ultricies posuere odio</li>
+                                <li>Sed vestibulum mattis laoreet. Donec sollicitudin justo luctus nulla consectetur</li>
+                                <li>Nam dolor tellus, dictum sit amet libero eu, semper placerat massa.</li>
+                                <li>consectetur tempor quam, aliquam dignissim diam hendrerit nec. Cras sodales at nisl</li>
+                            </ul>
+                            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
                         </div>
                     </div>
+                    <div class="clearfix"> </div>
                 </div>
-            </section>
+            </section>-->
 
             <!---footer--->
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-3 col-sm-6 col-xs-12 width-set-50">
+                        <div class="col-md-3 col-sm-6 col-xs-12 width-set-100">
                             <div class="footer-details">
                                 <h4>Get in touch</h4>
                                 <ul class="list-unstyled footer-contact-list">
                                     <li>
                                         <i class="fa fa-map-marker fa-lg"></i>
-                                        <p>701 Old York Drive Richmond USA.</p>
+                                        <p>San Francisco Bay Area, CA</p>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone fa-lg"></i>
-                                        <p><a href="tel:+1-202-555-0100"> +1-202-555-0100</a></p>
+                                        <p><a href="tel: 408-805-2688"> 408-805-2688</a></p>
                                     </li>
                                     <li>
                                         <i class="fa fa-envelope-o fa-lg"></i>
-                                        <p><a href="mailto:demo@info.com"> demo@info.com</a></p>
+                                        <p><a href="mailto:tomodachiconventions@gmail.com"> tomodachiconventions@gmail.com</a></p>
                                     </li>
                                 </ul>
                                 <div class="footer-social-icon">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>                           
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
                                     <a href="#"><i class="fa fa-instagram"></i></a>
                                     <a href="#"><i class="fa fa-google-plus"></i></a>
                                     <a href="#"><i class="fa fa-youtube-play"></i></a>
@@ -202,18 +168,18 @@ License URI: http://www.themevault.net/license/-->
                                 <h4>explore</h4>
                                 <ul class="list-unstyled footer-links">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="rooms.html">Rooms</a></li>
-                                    <li class="active"><a href="gallery.html">Gallery</a></li>
-                                    <li><a href="#">Dinning</a></li>
-                                    <li> <a href="news.html">News</a></li>
+                                    <li><a href="about.html">Conventions</a></li>
+                                    <li><a href="rooms.html">Map</a></li>
+                                    <li class="active"><a>Chat</a></li>
+                                    <li><a href="#">MegaChat</a></li>
+                                    <li> <a href="news.html">Connect</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="col-md-6 col-sm-12 col-xs-12">
                             <div class="footer-details">
-                                <h4>Now On Instagram</h4>
+                                <h4>Coming Soon: Mobile Applications</h4>
                                 <div class="row">
                                     <div class="instagram-images">
                                         <div id="instafeed"></div>
@@ -224,7 +190,7 @@ License URI: http://www.themevault.net/license/-->
                     </div>
 
                     <div class="copyright">
-                        &copy; 2017 All right reserved. Designed by <a href="http://www.themevault.net/" target="_blank">ThemeVault.</a>
+                        &copy; 2017 All right reserved.
                     </div>
 
                 </div>
@@ -237,19 +203,5 @@ License URI: http://www.themevault.net/license/-->
             </a>
 
         </div>
-        <script>
-            var grid = document.querySelector('.grid');
-
-            var msnry = new Masonry(grid, {
-                itemSelector: '.grid-item',
-                columnWidth: '.grid-sizer',
-                percentPosition: true
-            });
-
-            imagesLoaded(grid).on('progress', function () {
-                // layout Masonry after each image loads
-                msnry.layout();
-            });
-        </script>
     </body>
 </html>
