--- a/news.html
+++ b/news.html
@@ -1,8 +1,3 @@
-<!--Template Name: vacayhome
-File Name: news.html
-Author Name: ThemeVault
-Author URI: http://www.themevault.net/
-License URI: http://www.themevault.net/license/-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +6,7 @@ License URI: http://www.themevault.net/license/-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="images/icons/favicon.png"/>
-        <title>vacayhome</title>
+        <title>Tomodachi</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -55,11 +50,11 @@ License URI: http://www.themevault.net/license/-->
                             <div class="col-md-2 col-sm-6 col-xs-6">
                                 <div id="logo">
                                     <!--<a href="index.html"><img src="images/logo.png" alt="logo"></a>-->
-                                    <a href="index.html"><span>vacay</span>home</a>
-                                </div>                       
+                                    <a href="index.html"><span>Tomo</span>dachi</a>
+                                </div>
                             </div>
                             <div class="col-sm-6 visible-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
                             </div>
                             <div class="col-md-8 col-sm-12 col-xs-12 remove-padd">
                                 <nav class="navbar navbar-default">
@@ -74,19 +69,19 @@ License URI: http://www.themevault.net/license/-->
                                     </div>
                                     <div class="collapse navigation navbar-collapse navbar-ex1-collapse remove-space">
                                         <ul class="list-unstyled nav1 cl-effect-10">
-                                            <li><a  data-hover="Home" href="index.html"><span>Home</span></a></li>
-                                            <li><a data-hover="About"  href="about.html"><span>About</span></a></li>
-                                            <li><a data-hover="Rooms" href="rooms.html"><span>Rooms</span></a></li>
-                                            <li><a data-hover="Gallery"  href="gallery.html"><span>Gallery</span></a></li>
-                                            <li><a data-hover="Dinning" href="dinning.html"><span>Dinning</span></a></li>
-                                            <li><a data-hover="News" class="active"><span>News</span></a></li>
-                                            <li><a data-hover="Contact Us" href="contact.html"><span>contact Us</span></a></li>
+                                            <li><a data-hover="Home" href="index.html"><span>Home</span></a></li>
+                                            <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
+                                            <li><a data-hover="Map"  href="rooms.html"><span>Map</span></a></li>
+                                            <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
+                                            <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Connect" class="active"><span>Connect</span></a></li>
+                                            <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
                             </div>
                         </div>
                     </div>
@@ -94,117 +89,69 @@ License URI: http://www.themevault.net/license/-->
             </header>
 
 
-            <!--end-->
-            <section class="image-head-wrapper" style="background-image: url('images/banner5.jpg');">
+            <!--end
+            <section class="image-head-wrapper" style="background-image: url('images/banner3.jpg');">
                 <div class="inner-wrapper">
-                    <h1>News</h1>
+                    <h1>About us</h1>
                 </div>
             </section>
-            <div class="clearfix"></div>
+            <div class="clearfix"></div>-->
+<!--  <p id="mytab1">hi</p>-->
 
-            <section class="resort-overview-block">
+
+
+
+
+
+
+<!--
+            <section class="about-block">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-right">
-                            <div class="side-A">
-                                <div class="product-thumb">
-                                    <div class="image">
-                                        <a href="single-blog.html"><img alt="image" class="img-responsive" src="images/category1.png"></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="side-B">
-                                <div class="product-desc-side">
-                                    <h3><a href="single-blog.html">luxury spa</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
-                                </div>
-                            </div>
+                        <div class="col-md-5 about-left">
+                            <p>Lorem <label>ipsum</label> dol  <span>-sitamet</span></p>
                         </div>
-                        <div class="clear"></div>
-                        <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-left">
-                            <div class="side-A">
-                                <div class="product-thumb">
-                                    <div class="image">
-                                        <a href="single-blog.html"><img src="images/category2.png" class="img-responsive" alt="image"></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="side-B">
-                                <div class="product-desc-side">
-                                    <h3><a href="single-blog.html">Beatusish ingl</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
-                                </div>
-                            </div>
+                        <div class="col-md-7 about-right">
+                            <h3>Lorem ipsum dolor sit amet, consec</h3>
+                            <p>Donec bibendum massa metus, vel aliquet nunc varius eu. Curabitur nec scelerisque dui. Quisque mattis libero et enim ultricies gravida. Nulla ut commodo massa, eget tincidunt ligula. Vivamus eu ante tincidunt, fermentum risus nec, pharetra turpis. Donec rhoncus eros sed felis aliquet tincidunt. In consectetur tempor quam</p>
+                            <ul class="list-unstyled list-inline">
+                                <li>Sed vitae facilisis nisi, in finibus lacus. Duis vel nulla orci.</li>
+                                <li>fringilla, at ultrices felis dignissim. Integer ultricies posuere odio</li>
+                                <li>Sed vestibulum mattis laoreet. Donec sollicitudin justo luctus nulla consectetur</li>
+                                <li>Nam dolor tellus, dictum sit amet libero eu, semper placerat massa.</li>
+                                <li>consectetur tempor quam, aliquam dignissim diam hendrerit nec. Cras sodales at nisl</li>
+                            </ul>
+                            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
                         </div>
-                        <div class="clear"></div>
-                        <div class="col-md-12 offspace-45"></div>
-                        <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-right">
-                            <div class="side-A">
-                                <div class="product-desc-side">
-                                    <h3><a href="single-blog.html">luxury room</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
-                                </div>
-                            </div>
-
-                            <div class="side-B">
-                                <div class="product-thumb">
-                                    <div class="image txt-rgt">
-                                        <a class="arrow-left" href="single-blog.html"><img alt="imaga" class="img-responsive" src="images/category3.png"></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="clear"></div>
-                        <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-left">
-                            <div class="side-A">
-                                <div class="product-desc-side">
-                                    <h3><a href="single-blog.html">heaven seanery</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
-                                </div>
-                            </div>
-
-                            <div class="side-B">
-                                <div class="product-thumb txt-rgt">
-                                    <div class="image">
-                                        <a class="arrow-left" href="single-blog.html"><img alt="imaga" class="img-responsive" src="images/category4.png"></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-
                     </div>
+                    <div class="clearfix"> </div>
                 </div>
-            </section>
+            </section>-->
 
             <!---footer--->
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-3 col-sm-6 col-xs-12 width-set-50">
+                        <div class="col-md-3 col-sm-6 col-xs-12 width-set-100">
                             <div class="footer-details">
                                 <h4>Get in touch</h4>
                                 <ul class="list-unstyled footer-contact-list">
                                     <li>
                                         <i class="fa fa-map-marker fa-lg"></i>
-                                        <p>701 Old York Drive Richmond USA.</p>
+                                        <p>San Francisco Bay Area, CA</p>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone fa-lg"></i>
-                                        <p><a href="tel:+1-202-555-0100"> +1-202-555-0100</a></p>
+                                        <p><a href="tel: 408-805-2688"> 408-805-2688</a></p>
                                     </li>
                                     <li>
                                         <i class="fa fa-envelope-o fa-lg"></i>
-                                        <p><a href="mailto:demo@info.com"> demo@info.com</a></p>
+                                        <p><a href="mailto:tomodachiconventions@gmail.com"> tomodachiconventions@gmail.com</a></p>
                                     </li>
                                 </ul>
                                 <div class="footer-social-icon">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>                           
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
                                     <a href="#"><i class="fa fa-instagram"></i></a>
                                     <a href="#"><i class="fa fa-google-plus"></i></a>
                                     <a href="#"><i class="fa fa-youtube-play"></i></a>
@@ -222,18 +169,18 @@ License URI: http://www.themevault.net/license/-->
                                 <h4>explore</h4>
                                 <ul class="list-unstyled footer-links">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="rooms.html">Rooms</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                    <li><a href="#">Dinning</a></li>
-                                    <li class="active"> <a href="news.html">News</a></li>
+                                    <li><a href="about.html">Conventions</a></li>
+                                    <li><a href="rooms.html">Map</a></li>
+                                    <li><a href="gallery.html">Chat</a></li>
+                                    <li><a href="#">MegaChat</a></li>
+                                    <li class="active"><a>Connect</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="col-md-6 col-sm-12 col-xs-12">
                             <div class="footer-details">
-                                <h4>Now On Instagram</h4>
+                                <h4>Coming Soon: Mobile Applications</h4>
                                 <div class="row">
                                     <div class="instagram-images">
                                         <div id="instafeed"></div>
@@ -244,7 +191,7 @@ License URI: http://www.themevault.net/license/-->
                     </div>
 
                     <div class="copyright">
-                        &copy; 2017 All right reserved. Designed by <a href="http://www.themevault.net/" target="_blank">ThemeVault.</a>
+                        &copy; 2017 All right reserved.
                     </div>
 
                 </div>
